--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-	"name": "fs-finder",
-	"description": "[ABANDONED] File system recursive finder",
-	"version": "1.8.1",
+	"name": "@itzrabbs/fs-finder",
+	"description": "File system recursive finder",
+	"version": "2.0.0",
 	"author": {
-		"name": "David Kudera",
-		"email": "kudera.d@gmail.com"
+		"name": "ItzRabbs"
 	},
 	"keywords": [
 		"file",
@@ -15,24 +14,28 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "git@github.com:Carrooi/Node-FsFinder.git"
+		"url": "git@github.com:ItzRabbs/fs-finder.git"
 	},
 	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/itzrabbs/fs-finder.git"
+	},
+	"homepage": "https://github.com/itzrabbs/fs-finder.git",
 	"engines": {
 		"node": ">=0.9"
 	},
 	"main": "./lib/Finder.js",
 	"dependencies": {
-		"moment": "^2.5.0",
-		"operator-compare": "~1.0.1",
+		"moment": "^2.24.0",
+		"operator-compare": "~1.0.3",
 		"escape-regexp": "~0.0.1",
-		"q": "~1.0.0",
-		"async": "~0.2.9"
+		"q": "~1.5.1",
+		"async": "~3.2.0"
 	},
 	"devDependencies": {
-		"chai": "~1.8.1",
-		"fs-mock": "~1.0.1",
-		"mocha": "~1.17.0"
+		"chai": "~4.2.0",
+		"fs-mock": "~1.2.1",
+		"mocha": "~7.1.0"
 	},
 	"scripts": {
 		"build-and-test": "npm run build && npm run test",
@@ -40,4 +43,3 @@
 		"build": "coffee -co ./test/lib ./test/src"
 	}
 }
-
