--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@itzrabbs/fs-finder",
 	"description": "File system recursive finder",
-	"version": "2.0.0",
+	"version": "2.0.1",
 	"author": {
 		"name": "ItzRabbs"
 	},
@@ -26,14 +26,15 @@
 	},
 	"main": "./lib/Finder.js",
 	"dependencies": {
+		"async": "~3.2.0",
+		"escape-regexp": "~0.0.1",
 		"moment": "^2.24.0",
 		"operator-compare": "~1.0.3",
-		"escape-regexp": "~0.0.1",
-		"q": "~1.5.1",
-		"async": "~3.2.0"
+		"q": "~1.5.1"
 	},
 	"devDependencies": {
 		"chai": "~4.2.0",
+		"coffeescript": "^2.5.1",
 		"fs-mock": "~1.2.1",
 		"mocha": "~7.1.0"
 	},
