--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,11 +4,8 @@ updates:
   directory: "/"
   schedule:
     interval: daily
+    time: "03:00"
     timezone: America/New_York
   open-pull-requests-limit: 10
   labels:
   - dependencies
-  ignore:
-  - dependency-name: chai
-    versions:
-    - 4.3.2
