--- a/.github/workflows/master.push.build-publish.yml
+++ b/.github/workflows/master.push.build-publish.yml
@@ -1,23 +1,37 @@
-name: Build/Publish on Push
+name: Publish
 
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch:
+  schedule:
+    - cron: '0 9 * * *'
 
 jobs:
   run:
-    name: Build/Publish on Push
+    name: Publish
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 16
       - run: npm install
       - run: npm run build --if-present
 #         - run: npm test
-
-      - uses: JS-DevTools/npm-publish@v1
+      
+      - uses: codfish/semantic-release-action@v1
         with:
-          token: ${{ secrets.NPM_AUTH_TOKEN }}
+          plugins: |
+            [
+              "@semantic-release/commit-analyzer",
+              "@semantic-release/release-notes-generator",
+              [
+                "@semantic-release/npm", {
+                  "pkgRoot": "dist"
+                }
+              ],
+              "@semantic-release/github"
+            ]
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+        continue-on-error: true
