--- a/.github/workflows/master.cron.publish.yml
+++ b/.github/workflows/master.cron.publish.yml
@@ -27,7 +27,7 @@ jobs:
               "@semantic-release/release-notes-generator",
               [
                 "@semantic-release/npm", {
-                  "pkgRoot": "dist"
+                  "pkgRoot": "lib"
                 }
               ],
               "@semantic-release/github"
