--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
   "files.exclude": {
     "**/.git": true,
-    "**/node_modules": true,
-    "package-lock.json": true
-  },
-  "editor.formatOnSave": true
+    "**/node_modules": true
+  }
 }
